Modified to use TestContainers

--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,6 @@ repositories {
 dependencies {
     testCompile 'org.seleniumhq.selenium:selenium-java:3.+',
                 'io.github.bonigarcia:webdrivermanager:3.3.0',
-                'junit:junit:4.12'
+                'junit:junit:4.12',
+                'org.testcontainers:selenium:1.12.5'
 }
